--- a/Pinny-iOS/Storyboards/Base.lproj/LogInSignUp.storyboard
+++ b/Pinny-iOS/Storyboards/Base.lproj/LogInSignUp.storyboard
@@ -59,14 +59,19 @@
                                     <action selector="anonButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6qP-eI-f3A"/>
                                 </connections>
                             </button>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="fJb-cg-IYk">
+                                <rect key="frame" x="221" y="438" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="fJb-cg-IYk" firstAttribute="leading" secondItem="S01-Tk-aeq" secondAttribute="trailing" constant="8" id="9D5-nU-jwN"/>
                             <constraint firstItem="0qA-5z-7uB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="Bgg-bK-0D5"/>
                             <constraint firstItem="4lg-be-A1A" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="J8Q-Xe-sJR"/>
                             <constraint firstItem="0qA-5z-7uB" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="QrM-XQ-kBB"/>
                             <constraint firstItem="0os-P6-JlY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="XoQ-Y7-TZP"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="0os-P6-JlY" secondAttribute="bottom" constant="8" id="dXO-ya-OdV"/>
+                            <constraint firstItem="fJb-cg-IYk" firstAttribute="centerY" secondItem="S01-Tk-aeq" secondAttribute="centerY" id="juw-Cd-YBQ"/>
                             <constraint firstItem="4lg-be-A1A" firstAttribute="top" secondItem="0qA-5z-7uB" secondAttribute="bottom" constant="8" id="sjz-nF-OH5"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0qA-5z-7uB" secondAttribute="trailing" constant="8" id="xhr-2X-G52"/>
                         </constraints>
@@ -74,6 +79,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Вход" id="hbG-DG-jic"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="fJb-cg-IYk" id="dLA-Rl-QwG"/>
                         <outlet property="anonButton" destination="4lg-be-A1A" id="5bQ-Ji-KuM"/>
                         <outlet property="logInButton" destination="S01-Tk-aeq" id="edd-51-pIY"/>
                         <outlet property="passwordTextField" destination="ILi-ix-mfc" id="Atp-St-Lwk"/>
@@ -136,17 +142,23 @@
                                     <constraint firstItem="wJ4-Eq-1kr" firstAttribute="leading" secondItem="tmS-JH-5cM" secondAttribute="leading" id="ix3-Sl-SjP"/>
                                 </constraints>
                             </stackView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="hEz-gg-sDl">
+                                <rect key="frame" x="278" y="480" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="hEz-gg-sDl" firstAttribute="centerY" secondItem="etX-8B-UkM" secondAttribute="centerY" id="4Db-UD-ivh"/>
                             <constraint firstItem="tmS-JH-5cM" firstAttribute="centerY" secondItem="EL6-Ng-got" secondAttribute="centerY" id="8wo-ly-iat"/>
                             <constraint firstItem="Qvd-Ce-F5m" firstAttribute="trailing" secondItem="tmS-JH-5cM" secondAttribute="trailing" constant="8" id="aJa-7B-WQ2"/>
                             <constraint firstItem="tmS-JH-5cM" firstAttribute="leading" secondItem="Qvd-Ce-F5m" secondAttribute="leading" constant="8" id="hwN-UC-xwF"/>
+                            <constraint firstItem="hEz-gg-sDl" firstAttribute="leading" secondItem="etX-8B-UkM" secondAttribute="trailing" constant="8" id="jhY-qs-wqx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Qvd-Ce-F5m"/>
                     </view>
                     <navigationItem key="navigationItem" title="Регистрация" id="bMA-In-gxq"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="hEz-gg-sDl" id="yGm-p6-EHJ"/>
                         <outlet property="emailTextField" destination="WoG-fc-eao" id="HK1-3C-ryc"/>
                         <outlet property="passwordConfirmTextField" destination="nvu-Lr-0gb" id="vOX-oL-mKg"/>
                         <outlet property="passwordTextField" destination="wJ4-Eq-1kr" id="1JW-ib-8pt"/>
